--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Room Viewmodel PageList Retrofit</string>
+    <string name="no_results">No results 😓</string>
+    <string name="language">Language: %s</string>
+    <string name="loading" >Loading</string>
+    <string name="unknown">\?</string>
 </resources>
